--- a/force-app/main/default/classes/VerifyResult.cls
+++ b/force-app/main/default/classes/VerifyResult.cls
@@ -1,3 +1,10 @@
+/*!
+ * Copyright (c) Friendly Captcha GmbH 2025.
+ * This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at https://mozilla.org/MPL/2.0/.
+ */
+
 /**
  * VerifyResult is a wrapper around the response of an
  * /api/v2/captcha/siteverify request.
